src/index.scss
@import url('https://fonts.googleapis.com/css?family=Montserrat:500,700');
@import url('https://fonts.googleapis.com/css?family=Lato');

html, body{
  height:100vh;
  padding:0;
  margin:0;
  font-family:Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color:#eee;
}

canvas{
  width:100%;
  height:100vh;

  &#mesh{
    position:relative;
    background:transparent;
    z-index:1;
  }

  &#background{
    background:#222;
    position:fixed;
    z-index:-100;
  }
}

.banner{
  width:100%;
  height:100vh;

  .header{
    position:absolute;
    right:30px;
    top:25%;
    font-size:12vh;
    z-index:100;
    cursor:default;
    user-select:none;

    .line{
      height:4px;
      background:#eee;
      transition:margin 0.5s;
      margin-bottom:-4px;
    }
  }

  .soc{
    height:30px;
    position:absolute;
    right:0;
    bottom:0;
    z-index:2;
    padding:0 5px 5px 0;

    svg{
      position:relative;
      height:100%;
      stroke:#fff;
      fill:none;
      stroke-width:2;
      stroke-linecap:round;
      stroke-linejoin:round;
      cursor:pointer;
      margin-left:5px;
    }
  }
}

section{
  padding:3em 4em;

  &:last-child{
    margin-bottom:50px;
  }
}

.title{
  font-size:40px;
  font-family:Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight:700;
  margin-bottom:50px;
  text-transform:uppercase;
  text-align:center;
}

.category{
  margin:0 auto 3em;

  @media screen and (min-width:901px){
    &{
      width:75%;
    }
  }

  .category_title{
    text-align:center;
    margin-bottom:1em;
    font-size:1.25em;
    font-family:Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight:500;
  }

  .skills{
    font-size:1.1em;
    display:flex;
    flex-wrap:wrap;

    .skill{
      flex-grow: 1;
      background-color:#f7f7f7;
      margin:5px 10px;
      padding:8px 10px;
      min-width: 100px;
      user-select:none;
      text-align:center;
    }
  }
}

.projects{
  display:flex;
  flex-wrap:wrap;
  width:100%;

  .project{
    position:relative;
    height:50px;
    width:100%;
    background:black;
    flex-shrink:0;
    margin-bottom:20px;
    align-items:stretch;

    @media screen and (min-width:651px) and (max-width:900px){
      &{
        width:calc(50% - 10px);

        &:not(:nth-child(2n)){
          margin-right:20px;
        }
      }
    }

    @media screen and (min-width:901px) and (max-width:1200px){
      &{
        width:calc(33.33% - 10px);

        &:not(:nth-child(3n)){
          margin-right:15px;
        }
      }
    }

    @media screen and (min-width:1201px) and (max-width:1500px){
      &{
        width:calc(25% - 10px);

        &:not(:nth-child(4n)){
          margin-right:calc(40px / 3);
        }
      }
    }

    @media screen and (min-width:1501px){
      &{
        width:calc(20% - 10px);

        &:not(:nth-child(5n)){
          margin-right:12.5px;
        }
      }
    }
  }
}

.contact{
  display:flex;
  justify-content:center;

  .form_wrap{
    display:flex;
    flex-direction:column;
    width:100%;
    max-width:30em;

    .message{
      position:absolute;
      transform:translateY(calc(-100% - 0.5em));

      &.true{
        color:green;
      }

      &.false{
        color:red;
      }
    }

    .main{
      display:flex;
      flex-direction:column;
      justify-content:space-between;

      .section{
        width:100%;
        display:flex;
        flex-direction:column;
      }
    }

    .actions{
      margin-top:10px;
      display:flex;
      flex-wrap:wrap;
      justify-content:flex-end;

      .recaptcha{
        .main{
          font-size:10px;
        }

        .links{
          font-size:10px;
          text-align:center;

          a{
            margin:10px;
          }
        }
      }

      .btn{
        margin-left:auto;
        height:0%;
      }
    }

    input, textarea{
      font-size:14px;
      border-radius:5px;
      border:1px solid #888;
      outline:none;
      padding:6px 10px;
      font-family:Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
      font-size:16px;
    }

    input + input{
      margin-top:10px;

      &::-webkit-inner-spin-button, &::-webkit-outer-spin-button{
        -webkit-appearance:none;
        margin:0;
      }
    }

    textarea{
      flex-grow:1;
      resize:vertical;
      margin-top:10px;
      min-height:200px;
    }
  }

  #grecaptcha{
    position:fixed;
    opacity:0;
    left:-200%;
  }
}

a{
  text-decoration:none;
  color:inherit;

  &:hover{
    text-decoration:underline;
  }
}

.btn{
  display:inline-block;
  background:hsl(172, 97%, 47%);
  padding:10px 15px;
  border-radius:5px;
  color:#fff;
  text-shadow:1px 1px 0 rgba(0,0,0,0.2), 1px 1px 0 rgba(15,15,15,0.1);
  cursor:pointer;
  transition:background-color 0.2s ease;

  &:hover{
    background:hsl(172, 97%, 42%);
  }

  &:active{
    background:hsl(172, 97%, 37%);
  }

  &.disabled{
    background:hsl(150, 0%, 70%);
    cursor:default;
  }
}

.notifications{
  position:fixed;
  z-index:101;
  bottom:0;
  left:0;
  display:flex;
  flex-direction:column-reverse;
  padding:20px;
  box-sizing:border-box;
  width:300px;

  .toast{
    width:100%;
    min-height:50px;
    padding:5px;
    border:1px solid #fff;
    border-radius:5px;
    box-sizing:border-box;
    background:#222;
    display:flex;
    align-items:center;
    justify-content:center;
    text-align:center;
    transition:margin-left 0.4s;

    &+.toast{
      margin-bottom:10px;
    }

    &.hidden{
      margin-left:-150%;
    }
  }
}

